--- a/kyverno-policies/readonly-root-filesystem.yaml
+++ b/kyverno-policies/readonly-root-filesystem.yaml
@@ -12,7 +12,7 @@ spec:
         kinds:
         - Pod
         namespaces:
-        - devsecops-prod 
+        - devsecops-dev
     validate:
       message: "Containers must run with a read-only root filesystem in the production environment."
       pattern:
